Fix mobile menu button alignment

--- a/src/domain/app/mobileNavigation/mobileHeader/mobileNavbar/mobileNavbar.module.scss
+++ b/src/domain/app/mobileNavigation/mobileHeader/mobileNavbar/mobileNavbar.module.scss
@@ -54,6 +54,7 @@ $logoWidth: 5.5rem;
     background: none;
     border: none;
     padding: 0.5rem;
+    margin-right: -0.5rem;
     
     svg {
       height: 1.5rem;
